* Updated third-party libraries.
* Fixed an issue where the pagination went horribly wrong.
* Improved the general application reliability.
* Added Conan to the build workflow (external dependencies are managed there now).
* Fixed build on macOS.
* Fixed an issue where plug-ins were required to exist.
* Added support for the Hyvor Talk commenting system.


Version 9 [2018-11-10]:
* Replaced the aging NLTemplate engine by inja, fixing threading problems.
* Updated third-party libraries.
* Added a new theme: blerc.
* Improved the default theme's font size (= readability).
* Fixed the sorting of the yearly and monthly archives.
* Fixed the listing of duplicate categories/tags in the sidebar.
* Removed many unnecessary files from the default theme.
* Improved stdlib compatibility with CMake [schorsch_76].
* Fixed the responsivity of the page list for the default theme.


Version 8 [2018-06-23]:
* Fixed a recently introduced bug which accidentally removed the double-slash from generated URLs.
* Added support for Commento comments.
* Improved comments integration: supports separate <HEAD> scripts now.
* Improved OEmbed support: Unicode domains were potentially failing.
* Updated third-party libraries.
* Improved the slug generation again.


Version 7 [2018-02-17]:
* Updated third-party libraries.
* Improved cross-platform support: blogcpp detects <filesystem> somewhat smarter now.
* Added support for article series.
* Added a new configuration variable: series.
* Improved code structure: Created a bunch of new classes and moved stuff there.
* Improved processing speed by reducing the number of MarkdownParser and EmojiParser calls.
* Added support for XML OEmbeds.
* Tweaked the default theme.
* Added support for varying page positions.
* Fixed missing respect for the global emoji On/Off setting.
* Fixed wrong paths in the page navigation bar.
* Fixed OpenGraph image validation.
* Fixed a possible crash with the cleanup of old output files.


Version 6 [2017-12-23]: